# django-poynter

./: LICENSE  Makefile  README.md  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
django_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
poynter/: asgi.py  urls.py
poynter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
poynter/config/: asgi.py  config.py  local.example.yml  local.yml  settings.py  test_settings.py  urls.py
poynter/points/: admin.py  forms.py  models.py  tests.py  urls.py  views.py  views_htmx.py
poynter/points/migrations/: 0001_initial.py
poynter/points/scripts/: 0000_hopper.py
poynter/points/static/hello/: site.css
poynter/templates/points/: about.html  base.html  home.html  layout.html  log_message.html  space.html  vote.html  votes.html
