[project]
name = "poynter"
version = "0.1.0"
description = "Software pointing board for Django apps."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "crispy-bootstrap5",
  "daphne",
  "dj-database-url",
  "django-alive",
  "django-allauth[socialaccount, saml]",
  "django-crispy-forms",
  "django-extensions",
  "django-redis",
  "django-storages",
  "django-require-login",
#   "django-webserver[pyuwsgi]",
  "Faker",
  "goodconf[yaml]",
  "psycopg2-binary",
  "pydantic",
  "requests",
  "rules",
  "sentry-sdk[celery]",
  "whitenoise",
  # "wsgi_basic_auth",
]


[project.optional-dependencies]
dev = [
  "debugpy",
  "django-debug-toolbar",
  "factory-boy",
  "icecream",
  "locust",
  "pre-commit",
  "pytest-cov",
  "pytest-django",
  "ruff",
]

[project.scripts]
"manage.py" = "poynter:manage"
